# max--

./: .gitignore  CMakeLists.txt  README.md  compile.sh  entire-workspace.txt
grammar/: grammar.txt
include/: common.h  debug.h
include/arena/: arena.h  arena_test.h
include/ast/lexer/: lexer.h
include/ast/parser/: ast.h  ast_printer.h  parser.h
include/errors/: diagnostics.h
include/semantics/: scope.h  semantics.h  walker.h
include/semantics/def-assn-analysis/: def_assn.h
include/table/: ptrtable.h
include/vector/: ptrvec.h
scripts/: gen_int_decls.py
src/: common.c  debug.c  main.c
src/arena/: arena.c  arena_test.c
src/ast/: ast_node.c
src/ast/lexer/: lexer.c
src/ast/parser/: ast_printer.c  parser.c
src/errors/: diagnostics.c
src/semantics/: scope.c  walker.c
src/semantics/def-assn-analysis/: def_assn.c
src/table/: ptrtable.c
src/vector/: ptrvec.c
tests/testfiles/: hello_world.in
tests/testfiles/blocks/: block_dec.in
tests/testfiles/cf/: if-else.in
tests/testfiles/decs/: big_int_dec.in  int_assn.in  int_dec.in
tests/testfiles/ops/: add.in  complex.in
tests/testfiles/simple/: int_dec.in
tests/testfiles/strings/: hello_world.in
